# oh-my-pi

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
.turbo/cache/: 170e6ae34d92a71b-manifest.json  170e6ae34d92a71b-meta.json  170e6ae34d92a71b.tar.zst  250c936961954ca2-manifest.json  250c936961954ca2-meta.json  250c936961954ca2.tar.zst  2eeef57546c627ee-manifest.json  2eeef57546c627ee-meta.json  2eeef57546c627ee.tar.zst  31c58ab3d6db9b4d-manifest.json  31c58ab3d6db9b4d-meta.json  31c58ab3d6db9b4d.tar.zst  348875811d19fb9f-manifest.json  348875811d19fb9f-meta.json  348875811d19fb9f.tar.zst  393446eb25593b7a-manifest.json  393446eb25593b7a-meta.json  393446eb25593b7a.tar.zst  3b82b7e7a32f2d14-manifest.json  3b82b7e7a32f2d14-meta.json  3b82b7e7a32f2d14.tar.zst  3c85cf2dbb3a83ec-manifest.json  3c85cf2dbb3a83ec-meta.json  42d4e22c5d3833fe-manifest.json  42d4e22c5d3833fe-meta.json  42d4e22c5d3833fe.tar.zst  42e7818a6e2227c0-manifest.json  42e7818a6e2227c0-meta.json  42e7818a6e2227c0.tar.zst  4c2e263b6fed6e53-manifest.json  4c2e263b6fed6e53-meta.json  4c2e263b6fed6e53.tar.zst  4c619aa9a873668f-manifest.json  4c619aa9a873668f-meta.json  4c619aa9a873668f.tar.zst  5bdba8054f32bc2e-manifest.json  5bdba8054f32bc2e-meta.json  5bdba8054f32bc2e.tar.zst  5bea1d7f5ad9c15f-manifest.json  5bea1d7f5ad9c15f-meta.json  (+78 more)
docs/: ERRATA-GPT5-HARMONY.md  porting-from-pi-mono.md
docs/tools/: edit.md  search.md
scripts/session-stats/: README.md  harmony_backtest.py  sync.py
(+9 files in other folders)
